Feature/category coupon (#371)
* feature: 카테고리 쿠폰 엔티티 수정

* 1

* feat: category coupon 엔티티 저장소 생성

* feat: 기본골결 형성

* feat: category coupon 생성 로직 추가

* fix: 만료일 안들어가는거 수정

* fix: 이름수정